# rag

./: .env.example  .gitignore  Makefile  README.md  app.py  cdk.json  constants.py  mkdocs.yml  pyproject.toml
client/: app.py
docs/: 01_Prototype_Analysis.md  02_Architecture_Comparison.md  03_Implementation_Guide.md  04_Project_Management.md  05_Metaprompting_and_AI_Tools.md  06_Blockers_Today.md  07_Deployment_Guide.md  07_Evaluation.md  index.md
docs/1-analysis/: 01_Prototype_Analysis.md  02_Architecture_Comparison.md  index.md
docs/2-strategy/: 04_Project_Management.md  05_Metaprompting_and_AI_Tools.md  06_Blockers_Today.md  index.md
docs/3-operations/: 03_Implementation_Reference.md  07_Deployment_Guide.md  08_Evaluation.md  09_Road_to_Production.md  10_RAG_Implementation.md  index.md
rag/api/: infrastructure.py
rag/rag/: infrastructure.py
rag/rag/runtime/: Dockerfile  main.py
rag/rag/runtime/api/: models.py
rag/storage/: infrastructure.py
scripts/: bedrock-test.sh  test_api.py
scripts/input/: 02_auth_rejection.json  03_authenticated_query.json  claude_test_body.json  titan_test_body.json
scripts/output/: 03_authenticated_query_response.json  claude_response.json  titan_test_default.json
src/rag/: __init__.py  component.py
src/rag/api/: infrastructure.py
src/rag/ingestion/: seed.py
src/rag/rag/: infrastructure.py
src/rag/rag/runtime/: Dockerfile  config.py
src/rag/rag/runtime/api/: models.py  routes.py
src/rag/rag/runtime/services/: embedder.py  generator.py  logger.py  retriever.py
src/rag/storage/: infrastructure.py
