[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "danivpv", email = "danivpv@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.260.0,<3.0.0",
    "constructs>=10.5.0,<11.0.0",
    "streamlit>=1.58.0",
]

[dependency-groups]
lambda-requirements = [
    "pydantic-settings>=2.14.2",
    "boto3>=1.43.36",
    "mangum>=0.21.0",
    "faiss-cpu>=1.14.3",
    "fastapi[standard]>=0.138.1",
    "pydantic>=2.13.4",
]
data-ingestion = [
    "boto3>=1.43.36",
    "docx2txt>=0.9",
    "faiss-cpu>=1.14.3",
    "langchain-community>=0.4.2",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.5.0",
    "pypdf>=6.14.2",
    "typer>=0.26.8",
]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
    "python-dotenv>=1.2.2",
    "ty>=0.0.55",
]
docs = ["mkdocs-material>=9.7.6"]

[tool.uv]
default-groups = ["dev", "lambda-requirements", "data-ingestion", "docs"]

[project.scripts]
hello = "rag:hello"
hello-app = "rag:app"
seed = "rag.ingestion.seed:app"

[build-system]
requires = ["uv_build>=0.11.25,<0.12"]
build-backend = "uv_build"
